--- a/Rentify.RazorWebApp/Pages/PostPages/Index.cshtml
+++ b/Rentify.RazorWebApp/Pages/PostPages/Index.cshtml
@@ -155,7 +155,9 @@
         <div class="col-md-8">
             <div class="main-content p-3">
                 <!-- Header tạo bài viết -->
-                <div class="card border-0 shadow-sm mb-4">
+                @if (User.IsInRole("Admin"))
+                {
+                     <div class="card border-0 shadow-sm mb-4">
                     <div class="card-body">
                         <div class="d-flex align-items-center mb-3">
                             <img src="https://via.placeholder.com/40" alt="Avatar" class="rounded-circle me-3" width="40" height="40">
@@ -188,6 +190,7 @@
                         </div>
                     </div>
                 </div>
+                }
 
                 <!-- Danh sách bài viết -->
                 <div id="post-container">
